# CoreSampler

./: .gitignore  CMakeLists.txt  README.md  build-and-run.sh
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
docs/: Simpler_Reference.md
